fix scrollbar for RTL languages (#1150)
make the behavior same as before for both RTL and LTR languages

make solution use dynamic scrollbar size

as suggested in CR

--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -1154,11 +1154,13 @@ a.im_panel_peer_photo .peer_initials {
   box-shadow: none;
   outline: none;
   box-shadow: 0 1px 0 0 #e8e8e8;
-  padding: 1px 30px 1px 0;
+  padding: 1px 28px 1px 0;
+  position: relative;
   margin: 0;
   min-height: 50px;
   line-height: 20px;
   height: auto;
+  box-sizing: border-box;
 
   &:focus {
     border: 0;
